src/serve/static/style.css
* {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
}

:root {
    --dark-color: #000000;
    --light-color: #ffffff;
    --light-grey: #cccccc;
    --dark-grey: #434343;
    --accent-color: #7FFF00;
    --dark-blue: #121B42;
    --red: #ff1a1a;
    --anti-white: #f2f3f4;
    --links: #20b2aa;
}

.no-content-warn {
    text-align: center;
}
/* TOP NAVBAR */

ul.topnav {
    display: flex;
    gap: 2ch;
    padding: 1rem;
    list-style-type: none;
    align-content: center;
    background: var(--dark-color);
    background: -webkit-linear-gradient(to right, var(--dark-color), var(--dark-color));
    background: linear-gradient(to right, var(--dark-grey), var(--dark-color));
    justify-content: center; // horizontal alignment
    align-items: center; // vertical alignemnt
}

ul.topnav a {
    text-decoration: none;
    color: var(--light-color);
    font-size: 1.3rem;
}

ul.topnav a:hover {
    border-bottom: solid;
    border-color: var(--light-color);
}

ul.topnav input {
    padding: 4px;
}

ul.topnav button {
    border: none;
    background-color: var(--accent-color);
    cursor: pointer;
    padding: 4px;
}

ul.topnav button:hover {
    opacity: 0.8;
}

@media (max-width: 550px) {
    ul.topnav {
        flex-direction: column;
        align-items: center; // vertical alignemnt
    }

    ul.topnav li.search {
        display:flex;
        flex-direction: column;
        gap: 1ch;
        width: 85%;
    }
}

/* END OF NAVBAR */


/* ACCORDION */

.category > button {
    text-align: center;
}

.btn_category {
    background-color: var(--light-grey);
    cursor: pointer;
    padding: 1rem;
    width: 100%;
    border: none;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
}

.category > .active, .btn_category:hover {
    opacity: 0.7;
}

.product-catalog-grid {
    padding: 2ch;
    display: none;
    grid-gap: 1ch;
    background-color: var(--light-color);
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
}

.btn-product-page {
    text-decoration: none;
    color: var(--dark-color);
}

.btn-product-page:hover {
    cursor: pointer;
    border-bottom: solid;
    border-color: var(--dark-color);
}

.product-catalog-grid > span > .active {
    border-color: var(--dark-color);
    border-bottom: solid;
}

@media (max-width: 500px) {
    .product-catalog-grid {
        grid-template-columns: repeat(2, 1fr);
        justify-items: center;
    }
}

@media (max-width: 320px) {
    .product-catalog-grid {
        grid-template-columns: repeat(1, 1fr);
        justify-items: center;
    }
}

/* END OF ACCORDION */

/* TITLE OF THE PAGE */
h1#category {
    text-align: center;
}

/* PRODUCT-FILTER */

.product-filter  {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.product-filter > * {
    margin: 6px;
    border: none;
}

.product-filter > button {
    background-color: var(--light-grey);
    border: none;
    padding: 1ch;
}

.product-filter  select {
    background-color: var(--light-grey);
    padding: 1ch;
    border: none;
}

.product-filter > select:hover, button:hover {
    opacity: 0.9;
    cursor: pointer;
    opacity: 0.7;
}

/* END OF PRODUCT-FILTERr */

/* FILTER PAGE */

.overlay {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: var(--dark-color);
    overflow-x: hidden;
    transition: 0.5s;
}

.overlay-content {
    position: relative;
    top: 25%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
}

.overlay a {
    padding: 8px;
    text-decoration: none;
    font-size: 36px;
    color: var(--light-grey);
    display: block;
    transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
    color: var(--light-color);
}

.overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
}

.form-wrapper {
    display: flex;
    flex-direction: column;
    color: var(--light-color);
}

@media screen and (max-height: 450px) {
    .overlay a {font-size: 20px}
    .overlay .closebtn {
        font-size: 40px;
        top: 15px;
        right: 35px;
    }
}
/* END OF FILTER PAGE */

/* PRODUCT-GRID */

#product-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 10px;
    margin: 5px 0px;
}

.product-card {
    background-color: var(--anti-white);
    width: 250px;
    height: 400px;
    margin: 0 auto;
    padding: 10px;
    text-align: center;
}

.product-card > img {
    width: 100%;
    height: 60%;
    margin: 0 auto;
    padding: 10px;
}

.product-card > h4 {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    overflow: hidden;
}

.product-card > .btn-group button {
    padding: 10px;
    border: none
}

.product-card > .btn-group {
    display: grid;
    grid-gap: 5px;
    grid-template-areas: "vist compare" "add-rm add-rm";
}

.btn-vist {
    background-color: var(--dark-blue);
    color: var(--light-color);
    grid-area: vist;
}

.btn-vist:hover {
    opacity: 0.8;
}

.btn-compare {
    background-color: var(--accent-color);
    grid-area: compare;
}

.btn-compare:hover {
    opacity: 0.8;
}

.btn-add-rm {
    grid-area: add-rm;
}

.btn-add, .btn-remove {
    background-color: var(--red);
    color: var(--light-color);
    width: 100%;
}

.btn-add:hover {
    opacity: 0.8;
}

@media (max-width: 1150px) {

    #product-grid {
        grid-template-columns: repeat(3, 1fr);
    }

}

@media (max-width: 700px) {

    #product-grid {
        grid-template-columns: repeat(2, 1fr);
    }

}

@media (max-width: 500px) {

    #product-grid {
        grid-template-columns: repeat(1, 1fr);
    }

}

/* END OF PRODUCT-GRID */

/* PAGINATION */

.pagination  {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.pagination > * {
    margin: 6px;
}

.pagination > button {
    background-color: var(--light-grey);
    padding: 1ch;
    border: none;
}

.pagination > button.accent {
    background-color: var(--accent-color);
}

.pagination > button.cur {
    background-color: var(--dark-blue);
    color: var(--light-color);
}

.spacer {
    height: 10px;
    width: 100vw;
}

/* END OF PAGINATION */

/* FOOTER */

footer {
    background: var(--dark-color);
    background: -webkit-linear-gradient(to right, var(--dark-color), var(--dark-color));
    background: linear-gradient(to right, var(--dark-grey), var(--dark-color));
    width: 100%;
    height: 100px;
}

footer > ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5px;
}

footer > ul > li{
    list-style-type: none;
    margin: 3px;
}

footer > ul > li > a {
    color: var(--light-color);
    text-decoration: none;
}

footer > ul > li > a:hover {
    text-decoration: underline;
}
/* END OF FOOTER */

/* WISHLIST PAGE */

.table-wrapper {
    display: grid;
    grid-template-columns: 150px 1fr;
    height: 85vh;
    width: 85vw;
    margin: 20px auto;
}

.wishlist-nav {
    display: flex;
    flex-direction: column;
    font-size: 1.3rem;
    background-color: var(--accent-color);
}

.wishlist-nav > div {
    text-align: center;
    padding: 10px;
    background-color: var(--accent-color);
    color: var(--dark-color);
}

.wishlist-nav div:hover {
    cursor: pointer;
    color: var(--accent-color);
    background-color: var(--dark-color);
    border: none;
    transition: 0.4s;
}
.wishlist-nav  div.active {
    color: var(--accent-color);
    background-color: var(--dark-color);
    border: none;
}

#tab-content-area > #price-graph > .btn-graph-group {
    display: flex;
    justify-content: center;
    background-color: var(--anti-white);
    margin-bottom: 5px;
}

.btn-graph-group > button {
    padding: 10px;
    background-color: var(--accent-color);
    border: none;
    margin: 5px;
}

.btn-graph-group > button:hover, button.active {
    background-color: var(--dark-color);
    color: var(--accent-color);
    opacity: 1;
}

.form-save-build {
    display: flex;
    flex-direction:row;
    justify-content: center;
}

.form-save-build > form {
    margin-top: 20px;
    display: grid;
    grid-gap: 2ch;
}



#submit-btn {
    padding: 8px;
    background-color: var(--dark-grey);
    color: var(--light-color);
    border: none;
    width: 100%;
}

.form-save-build > form > * {
    font-size: 1.5rem;
}

@media (max-width: 650px) {

    .table-wrapper {
        display: inline-block;
        width: 100vw;
    }

    .wishlist-nav {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
    }

}

@media (max-width: 450px) {
    .wishlist-nav {
        display: flex;
        flex-direction: column;
    }

}

/* END OF WISHLIST PAGE */

/* INDEX PAGE */

#index-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 100%;
}

#index-wrapper > .wrapper {
    width: 80%;
    margin: 20px auto;
}

#index-hero {
    text-align: center;
    background-color: var(--light-grey);
    color: var(--dark-color);
    margin-top: 20px;
    height: 30vh;
}

#index-hero > #index-hero-btn {
    padding: 10px;
    border: none;
    background-color: var(--accent-color);
    color: var(--dark-color);
    margin: 10px 0px;
}

.product-catalog-grid-index {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1ch;
}

.product-catalog-grid-index > button {
    padding: 10px;
    border: none;
    background-color: var(--dark-grey);
    color: var(--light-color);
}

@media (max-width: 550px) {
    .product-catalog-grid-index {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 350px) {
    .product-catalog-grid-index {
        grid-template-columns: repeat(1, 1fr);
    }
}
/* END INDEX PAGE */

/* ABOUT PAGE */

#about-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 100%;
}

#about-content {
    width: 80%;
    margin: 10px auto;
    font-size: 1.10rem;
}

#about-content ul {
    list-style-type: none;
}

#about-content mark {
    background-color: var(--accent-color);
}

#about-content mark:hover {
    background-color: var(--links);
}

#about-content a {
    text-decoration: none;
    color: var(--links);
}

#about-content a:hover {
    text-decoration: underline;
}

#about-content ul.bulletpoint {
    list-style-type: disc;
}
/* END OF ABOUT PAGE */

/* COMPARISON PAGE */

.comparison-content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin: 10 auto;
    width: 90%;
    height: 85%;
    background-color: var(--anti-white);
    align-items: center;
    justify-items: center;
}
.comparison-content > iframe{
    width: 90%;
    height: 90%;
}

.comparison-btn-group {
    display: flex;
    justify-content: center;
    background-color: var(--anti-white);
    margin-bottom: 5px;
}

.comparison-btn-group > button {
    padding: 10px;
    margin: 5px;
    background-color: var(--accent-color);
    border: none;
}

@media (max-width: 800px) {

.comparison-content {
    display: flex;
    flex-direction: column;
    grid-gap: 2ch;
}

}
/* COMPARISON PAGE */

